[package]
name = "eos_guide_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] } # Client-Side Rendering
gloo = { version = "0.10", features = ["net", "storage"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = "0.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
gloo-utils = "0.2"
wasm-bindgen-futures = "0.4"